add readme and job_listener,ipynb

--- a/Jupyter Notebooks/log_preprocessing.ipynb
+++ b/Jupyter Notebooks/log_preprocessing.ipynb
@@ -246,7 +246,7 @@
     }
    ],
    "source": [
-    "base_df.filter(base_df['value'].isNull()).count()"
+    "base_df.filter(base_df['value'].isNull()).count()# jj"
    ]
   },
   {
